# mugraph

./: .pre-commit-config.yaml  README.md  interactive_graphs.html  pyproject.toml
mugraph/: __init__.py  __main__.py  dashboard.py  front.py  parser.py
mugraph/templates/: dashboard.html
templates/: dashboard.html
tests/: doubleh1.md  sample01.md  skiphead.md  test_parser.py  wrongh2.md
