[tool.poetry]
name = "mugraph"
version = "0.1.0"
description = "A documentation tool for microservice relationship"
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mistune = "=2.0.0a2"
networkx = "^2.4"
matplotlib = "^3.2"
flask = "^1.1"
pytest-cov = "^2.9"

[tool.poetry.dev-dependencies]
pytest = {version = "^5.3"}
pre-commit = {version = "^2.0"}
black = {version = "^19.10-beta.0", allow-prereleases = true}
ipython = "^7.13"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
